Added debug statements to tier task

--- a/tasks/subnet_facts_on_tier.yml
+++ b/tasks/subnet_facts_on_tier.yml
@@ -5,9 +5,12 @@
     region: "{{ region }}"
     filters:
       vpc-id: "{{ vpc_id }}"
-#      "tag:Tier": "{{ subnet_layer }}"
       "tag:Tier": "{{ subnet_tier }}"
   register: ec2_subnets
+
+- debug: var=subnet_tier
+
+- debug: var=ec2_subnets
 
 - name: Set subnet ID's in fact
   set_fact:
@@ -16,3 +19,5 @@
 
 - include_tasks: az_tags.yml
   when: subnet_has_az_tags is defined
+
+- debug: var=subnet_ids
